# DTTNet-Pytorch

./: pyproject.toml  setup.cfg
configs/: evaluation.yaml  infer.yaml
src/dp_tdf/: abstract.py
src/evaluation/: separate.py
