[metadata]
name = dttnet
version = 0.1.0
description = DTTNet music source separation model
author = junyuchen-cjy
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown
license_file = file: LICENSE

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
include_package_data = True
install_requires =
    torch==2.9.0
    torchaudio==2.9.0
    numpy
    einops==0.6.1
    soundfile==0.12.1
    omegaconf
    hyda-core
    pytorch-lightning>=2.0,<2.10
    tqdm
    librosa==0.9.1
